# sonetsim

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LESSONSLEARNED.md  README.md  REFS-PUBLIC.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: black-pylint-pytest.yml  pylint-pytest.yml  pylint.yml  python-publish.yml
config/tachometer/: profile.toml
docs/: contributor-architecture-blueprint.md
docs/diagrams/: python-classes.puml  python-packages.puml  repo-architecture.drawio  repo-architecture.puml  shell-call-graph.puml  tooling-integrations.puml
examples/: simulation_gridsearch.ipynb  simulation_gridsearch.py  sonetsim.py
sonet-sim/: sonetsim.py
sonetsim/: __init__.py  sonetsim.py
sonetsim/tests/: conftest.py  simulator_validator.py  test_simulator.py
