[tool.poetry]
name = "sonetsim"
version = "1.0.0"
description = "A library for (so)cial (net)work (sim)ulation."
authors = ["ksan <casonk@umich.edu>"]
license = "LGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
cdlib = "^0.3.0"
bayanpy = "^0.7.6"
leidenalg = "^0.10.1"
wurlitzer = "^3.0.3"
infomap = "^2.7.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
dyno-lab = {git = "https://github.com/casonk/dyno-lab.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["sonetsim/tests"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line-too-long — handled by formatter
    "B008",   # function-call in default args — too noisy for existing code
    "SIM108", # ternary instead of if/else — too aggressive for readability
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
